0.13.1dev (UNRELEASED)
======================

 * Show a useful error message when doing wiki version comparison
   against an old binary upload. (slinkp) (errors-openplans #31)

 * Fix error when request membership, missing getToolByName import
   (errors-openplans #38) (slinkp)

 * Avoid a UnicodeDecodeError when inviting by email, if an invalid
   email address isn't ascii. (fixes el#3) (rmarianski)

 * Fix broken test monkeypatching in opencore.auth.tests. (slinkp)


0.13.0 (2008/08/12)
===================

 * Code migrated to Zope 2.10 / Plone 3.0, older versions no longer supported.
   This requires database migrations that cannot be undone, so make backups
   and test thoroughly! See for more instructions:
   https://svn.openplans.org/svn/opencore/trunk/docs/Plone2.5-Plone3-migration.txt
   (rafrombrc)

 * Avoid exception in error view when the request is a POST,
   ticket #2681. (slinkp)

 * Remove subproject-related cruft from opencore.project. (slinkp)

 * Force project content delete to be done via POST; if it's a GET,
   redirect to a confirmation form. Fixes #2010. (slinkp)

 * Avoid site error on wiki edit if catalog has stale entries for attachments.
   (slinkp)

 * Add viewlet manager for data right before the end of the body tag (rmarianski)

 * Update contact/wiki add unit tests to directly instantiate class (rmarianski)

 * Correct condition on summary page lists blank slate (rmarianski)

 * Textarea borders should be focused orange instead of lime (rmarianski)

 * remove oc-getstarted div around adding a mailing list for aesthetic reasons
   (rmarianski)

 * add link on home page news header to news page (rmarianski)

 * uncomment getting started section of home page (rmarianski)

 * Add viewlet manager hook for additional head elements in main template
   (rmarianski)

 * Add opencore.tales which contains an opencore: syntax for
   pretty_date and project_noun (rmarianski)
