@@ -1,6 +1,9 @@
 0.13.1dev (UNRELEASED)
 ======================
 
+* Fix upgrades/to_0_13_0.py to actually migrate all the mailing lists
+  (slinkp et al.)
+  
  * Show a useful error message when doing wiki version comparison
    against an old binary upload. (slinkp) (errors-openplans #31)
 
